otter/tests/ui/fail_init_mutual_exclusion.stderr
error: duplicate `load` callback — `load` and `load_raw` may appear at most once, combined
  --> tests/ui/fail_init_mutual_exclusion.rs:20:40
   |
20 | otter::init!("m", [f], load = on_load, load_raw = on_load_raw);
   |                                        ^^^^^^^^
